--- a/css/main.css
+++ b/css/main.css
@@ -41,3 +41,17 @@ body {
   font-weight: 400;
   margin-top: -20px;
 }
+
+.input {
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  padding: 10px 20px;
+  width: 100%;
+  font-size: medium;
+  border-radius: 30px;
+  border: none;
+}
+.input::placeholder {
+  color: white;
+}
