--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ body {
 
 .main_container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
@@ -54,4 +55,10 @@ body {
 }
 .input::placeholder {
   color: white;
+}
+
+.quote {
+  position: fixed;
+  bottom: 20px;
+  padding: 20px;
 }
