--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 :root {
-  /* --xxlarge: 170px; */
+  --xxlarge: 170px;
   --xlarge: 100px;
   --large: 28px;
   --medium: 18px;
@@ -127,6 +127,7 @@ body {
   border-radius: 5px;
   background-color: rgba(255, 255, 255, 0.1);
   border: rgba(244, 244, 244, 0.2) 0.5px solid;
+  margin-bottom: 20px;
 }
 
 .bookmark_input_form .bookmark_input_name .lable {
@@ -183,6 +184,8 @@ body {
   display: flex;
   align-items: center;
   gap: 10px;
+  text-decoration: none;
+  color: white;
 }
 
 .bookmark_list .delete_btn {
