--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,12 @@
 body {
   margin: 0 auto;
   width: 100%;
-  background-color: blanchedalmond;
+  color: white;
+  background-image: url("https://images.unsplash.com/photo-1725615357444-6123528686cf?q=80&w=2069&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
 }
 
 .main_container {
@@ -88,7 +93,7 @@ body {
   right: 0;
   display: flex;
   justify-content: flex-end;
-  color: black;
+  color: white;
   cursor: pointer;
 }
 
@@ -190,4 +195,6 @@ body {
 
 .bookmark_list .delete_btn {
   font-size: var(--xxsmall);
+  cursor: pointer;
+  color: lightgray;
 }
